--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -30,30 +30,43 @@
           </button>
         </div>
         <div class="modal-body">
-          <form method="ADD">
+          <form action="/inventoryadder" method="post">
             <div class="form-row align-items-center">
               <div class="col-auto">
-                <label class="sr-only" for="validationSKU">SKU</label>
-                <input type="text" class="form-control mb-2" id="validationSKU" placeholder="SKU" required pattern="[0-9]{3}" maxlength="3">
+                <label for="validationSKU">SKU</label>
+                <input type="text" name="SKU" class="form-control mb-2" id="validationSKU" placeholder="SKU" required pattern="[0-9]{3}" maxlength="3">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="validationName">Name</label>
-                <input type="text" class="form-control mb-2" id="validationName" placeholder="Product Name" required pattern="[A-Za-z]+" maxlength="14">
+                <label for="validationName">Product Name</label>
+                <input type="text" name="Name" class="form-control mb-2" id="validationName" placeholder="Apple" required pattern="[A-Za-z]+" maxlength="14">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="validationRP">Reorder Point</label>
-                <input type="text" class="form-control mb-2" id="validationRP" placeholder="200" required min="1" max="8" pattern="[0-9]*">
+                <label for="validationRP">Reorder Point</label>
+                <input type="text" name="RP" class="form-control mb-2" id="validationRP" placeholder="200" required min="1" max="8" pattern="[0-9]*">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="validationQ">Quantity</label>
-                <input type="text" class="form-control mb-2" id="validationQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
+                <label for="validationQ">Quantity</label>
+                <input type="text" name="Amount" class="form-control mb-2" id="validationQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
               </div>
+              <div class="col-auto">
+                <label for="validationPrice">Price</label>
+                <input type="text" name="Price" class="form-control mb-2" id="validationPrice" placeholder="5.00" required min="1" max="8" pattern="[0-9]*.{1}[0-9]*">
+              </div>
+              <div class="col-auto">
+                <label for="validationCat">Category</label>
+                <input type="text" name="Cat" class="form-control mb-2" id="validationCat" placeholder="Fruit" required pattern="[A-Za-z]+" maxlength="14">
+              </div>
+              <div class="col-auto">
+                <label for="validationStock">Stock</label>
+                <input type="text" name="Stock" class="form-control mb-2" id="validationStock" placeholder="500" required min="1" max="8" pattern="[0-9]*">
+              </div>
+                <input type="submit" class="btn btn-primary"></input>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Submit</button>
         </div>
       </div>
     </div>
@@ -72,7 +85,7 @@
     return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
         '<tr>'+
             '<td>Full name:</td>'+
-            '<td>'+"something"+'</td>'+
+            '<td>'+'Name'+'</td>'+
         '</tr>'+
         '<tr>'+
             '<td>Extension number:</td>'+
@@ -89,7 +102,7 @@
     var inventory_data = {{inventory|tojson}};
     console.log(typeof(inventory_data))
     var table = $('#inventory_table').DataTable( {
-      data: inventory_data, 
+      data: inventory_data,
       columns: [
         { title: "SKU" },
         { title: "Name" },
@@ -106,12 +119,12 @@
       } ]
 
     } );
-    
+
     // Add event listener for opening and closing details
     $('#inventory_table tbody').on('click', 'td.details-control', function () {
         var tr = $(this).closest('tr');
         var row = table.row( tr );
- 
+
         if ( row.child.isShown() ) {
             // This row is already open - close it
             row.child.hide();
@@ -122,7 +135,7 @@
             row.child( format(row.data()) ).show();
             tr.addClass('shown');
         }
-    } );    
+    } );
 
   } );
 </script>
