--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,6 +40,18 @@
                   Inventory
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('transaction.incoming_transactions') }}">
+                    <span data-feather="file"></span>
+                    Incoming Transactions
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('transaction.outgoing_transactions') }}">
+                    <span data-feather="file"></span>
+                    Outgoing Transactions
+                </a>
+              </li>
             </ul>
             </ul>
           </div>
