--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,60 +1,70 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>This is the dashboard</h1>
-<!--  <a href="{{ url_for('dashboard.dashboard') }}">Dashboard</a>
-<a href="{{ url_for('inventory.inventory') }}">Inventory</a>
-<a href="{{ url_for('sales.sales') }}">Sales Orders</a>
-<a href="{{ url_for('user_auth.logout') }}">Sign out</a> -->
+<div>
+<h1 class="text-center">Dashboard</h1>
+</div>
+<div class="row" style="margin-top:20px;">
+    <div class="col-sm-6 left">
+        <h2 class="sub-header">Items Expiring Soon</h2>
+        <div class="table-responsive">
+            <table id="expire_table" style="width:100%" class="table table-striped table-bordered"></table>
+        </div>
+    </div>
 
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">PyMarket</a>
-
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-            <a class="nav-link" href="{{ url_for('user_auth.logout') }}">Sign out</a>
-        </li>
-    </ul>
-</nav>
-
-<div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <div class="sidebar-sticky">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <span data-feather="home"></span>
-                            Dashboard <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('sales.sales') }}">
-                            <span data-feather="file"></span>
-                            Sales Orders
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('inventory.inventory') }}">
-                            <span data-feather="shopping-cart"></span>
-                            Inventory
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('transaction.incoming_transactions') }}">
-                            <span data-feather="file"></span>
-                            Incoming Transactions
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('transaction.outgoing_transactions') }}">
-                            <span data-feather="file"></span>
-                            Outgoing Transactions
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <div class="col-sm-6 right">
+        <h2 class="sub-header">Products Need Reordering</h2>
+        <div class="table-responsive">
+            <table id="reorder_table" style="width:100%" class="table table-striped table-bordered"></table>
+        </div>
     </div>
 </div>
+
+
+<script>
+$(document).ready(function() {
+    var trans_data = {{expiring|tojson}};
+    var table = $('#expire_table').DataTable( {
+        data: trans_data,
+        searching: false,
+        paging: false,
+        info: false,
+
+        columns: [
+            { title: "BatchID" },
+            { title: "SKU" },
+            { title: "Name" },
+            { title: "Batch Quantity" },
+            { title: "Expiration" }
+        ]
+
+    } );
+
+} );
+</script>
+
+
+<script>
+$(document).ready(function() {
+    var trans_data = {{reorder|tojson}};
+    var table = $('#reorder_table').DataTable( {
+        data: trans_data,
+        searching: false,
+        paging: false,
+        info: false,
+
+        columns: [
+            { title: "SKU" },
+            { title: "Name" },
+            { title: "Stock Quantity" },
+            { title: "Reorder Point" }
+        ]
+
+    } );
+} );
+</script>
+
+
+
+
 {% endblock %}
