--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -124,7 +124,7 @@
 </div>
 <script>
   function format_table(batch_data){
-    var table_str = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
+    var table_str = '<table cellpadding="5" id="batchtable" cellspacing="0" border="0" style="padding-left:50px;">';
     table_str += '<tr>'+
                     '<th>'+"Batch ID"+"</th>"+
                     '<th>'+"Producer"+"</th>"+
@@ -137,7 +137,7 @@
       var expire_date = new Date(batch_data[i][3]);
       var now = new Date();
       var timeDiff = Math.abs(expire_date.getTime() - now.getTime());
-      var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24)); 
+      var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
       console.log(diffDays);
       if(diffDays <= 7){
         table_str += '<tr class="bg-warning text-dark">';
@@ -146,12 +146,12 @@
         table_str += '<tr>';
       }
       //console.log(expire_date);
-      table_str +=      '<td>'+batch_data[i][0]+'</td>'+
+      table_str +=      '<td class="batchid">'+batch_data[i][0]+'</td>'+
                         '<td>'+batch_data[i][1]+'</td>'+
                         '<td>'+batch_data[i][2]+'</td>'+
                         '<td>'+expire_date+'</td>'+
                         '<td>'+
-                            '<button type="button" name="#" class="btn btn-danger btn-sm" style="margin-left:10px" >Delete</button>'
+                            '<button type="button" name="deleteBButton" class="btn btn-danger btn-sm" style="margin-left:10px" >Delete</button>'
                           +'</td>'+
                     '</tr>';
     }
@@ -163,7 +163,7 @@
      var div = $('<div/>')
         .addClass( 'loading' )
         .text( 'Loading...' );
- 
+
     var batch_data;
     $.ajax({
               type: "POST",
@@ -231,7 +231,7 @@
             title: "Options",
             "data": null,
             "defaultContent": '<button type="button" name="editButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editModal">Edit</button>'
-            + '<button type="button" name="deleteButton" class="btn btn-danger btn-sm" style="margin-left:10px" >Delete</button>'
+            + '<button type="button" name="deleteIButton" class="btn btn-danger btn-sm" style="margin-left:10px" >Delete</button>'
         }
       ]
 
@@ -256,22 +256,58 @@
     // Delete product
     $('#inventory_table tbody').on('click', 'button', function() {
         var name = $(this).attr('name');
-        if (name == "deleteButton") {
+        if (name == "deleteIButton") {
             var tr = $(this).closest('tr');
             var row = table.row( tr );
             var data = row.data();
-            $.ajax({
-                      type:'POST',
-                      url:'/inventorydelete',
-                      data: {row_sku: data[0]},
-                      dataType: 'text',
-                      success: function(response) {
-                          console.log('success');
-                      },
-                      error: function(err){
-                          console.log(err);
-                      }
-            });
+            if(confirm("Are you sure you want to delete this Product?")){
+                $.ajax({
+                          type:'POST',
+                          url:'/inventorydelete',
+                          data: {row_sku: data[0]},
+                          dataType: 'text',
+
+                          success: function(response) {
+                              console.log('Delete success');
+                              row.remove().draw();
+                          },
+                          error: function(err){
+                              console.log(err);
+                          }
+                });
+            } else {
+                alert("Canceling deletion.");
+            }
+        }
+    });
+
+    // Delete batches
+    $('#inventory_table tbody').on('click', 'button', function() {
+        var name = $(this).attr('name');
+        if (name == "deleteBButton") {
+            var $row = $(this).closest('tr');
+            var $data = $(this).closest('tr')
+                               .find(".batchid")
+                               .text();
+            console.log($data);
+            if(confirm("Are you sure you want to delete this batch?")){
+                $.ajax({
+                          type:'POST',
+                          url:'/batchesdelete',
+                          data: {row_id: $data},
+                          dataType: 'text',
+
+                          success: function(response) {
+                              console.log('Delete success');
+                              $row.remove();
+                          },
+                          error: function(err){
+                              console.log(err);
+                          }
+                });
+            } else {
+                alert("Canceling deletion.");
+            }
         }
     });
 
