--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -230,8 +230,8 @@
             "targets": -1,
             title: "Options",
             "data": null,
-            "defaultContent": '<button type="button" name="editButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editModal">Edit</button>'
-            + '<button type="button" name="deleteIButton" class="btn btn-danger btn-sm" style="margin-left:10px" >Delete</button>'
+            "defaultContent": '<button style="margin-right:10px" type="button" name="editButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editModal">Edit</button>'
+            + '<button type="button" name="deleteIButton" class="btn btn-danger btn-sm" >Delete</button>'
         }
       ]
 
