--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -125,12 +125,22 @@
             </div>
             <div class="col-auto">
               <h5>Expiration Date</h5>
-              <label for="expireYear">Year</label>
-              <input type="text" style="width:65px" name="Year" class="form-control mb-2" id="expireYear" placeholder="2018" required min="4" max="4" pattern="[0-9]{4}">
-              <label for="expireMonth">Month</label>
+              <div class="row">
+                <div class="col-md-2">
+                  <label for="expireYear">Year</label>
+                  <input type="text" style="width:65px" name="Year" class="form-control mb-2" id="expireYear" placeholder="2018" required min="4" max="4" pattern="[0-9]{4}">
+                </div>
+                <div class="col-md-2">
+                  <label for="expireMonth">Month</label>
               <input type="text" style="width:45px" name="Month" class="form-control mb-2" id="expireMonth" placeholder="12" required min="1" max="2" pattern="[0-9]+">
-              <label for="expireDay">Day</label>
-              <input type="text" style="width:45px" name="Day" class="form-control mb-2" id="expireDay" placeholder="31" required min="1" max="2" pattern="[0-9]+">
+                </div>
+                <div class="col-md-2" style="margin-left:-1.3em;">
+                  <label for="expireDay">Day</label>
+                  <input type="text" style="width:45px" name="Day" class="form-control mb-2" id="expireDay" placeholder="31" required min="1" max="2" pattern="[0-9]+">
+                </div>
+                <div class="col-md-6"></div>
+              </div>
+    
             </div>
             <div class="modal-footer">
               <input type="submit" class="btn btn-primary"></input>
