--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -112,35 +112,28 @@
             <div class="form-row align-items-center">
               <div class="col-auto">
                 <label for="addSKU">SKU</label>
-                <input type="text" name="SKU" disabled class="form-control mb-2" id="addSKU">
+                <input type="text" name="batchSKU" readonly class="form-control mb-2" id="addBatchSKU">
               </div>
               <div class="col-auto">
                 <label for="addName">Producer</label>
-                <input type="text" name="Name" class="form-control mb-2" id="addName" placeholder="Producer A" required pattern="^[\w\-\s]+$" maxlength="22">
+                <input type="text" name="Producer" class="form-control mb-2" placeholder="Producer A" required pattern="^[\w\-\s]+$" maxlength="22">
               </div>
               <div class="col-auto">
                 <label for="addQ">Quantity</label>
-                <input type="text" name="Quantity" class="form-control mb-2" id="addQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
+                <input type="text" name="Quantity" class="form-control mb-2" placeholder="500" required min="1" max="8" pattern="[0-9]*">
               </div>
-            </div>
-            <div class="col-auto">
-              <h5>Expiration Date</h5>
-              <div class="row">
-                <div class="col-md-2">
-                  <label for="expireYear">Year</label>
-                  <input type="text" style="width:65px" name="Year" class="form-control mb-2" id="expireYear" placeholder="2018" required min="4" max="4" pattern="[0-9]{4}">
-                </div>
-                <div class="col-md-2">
-                  <label for="expireMonth">Month</label>
-              <input type="text" style="width:45px" name="Month" class="form-control mb-2" id="expireMonth" placeholder="12" required min="1" max="2" pattern="[0-9]+">
-                </div>
-                <div class="col-md-2" style="margin-left:-1.3em;">
-                  <label for="expireDay">Day</label>
-                  <input type="text" style="width:45px" name="Day" class="form-control mb-2" id="expireDay" placeholder="31" required min="1" max="2" pattern="[0-9]+">
-                </div>
-                <div class="col-md-6"></div>
+              <div class="col-md-2">
+                <label for="expireYear">Year</label>
+                <input type="text" style="width:65px" name="Year" class="form-control mb-2" id="expireYear" placeholder="2018" required min="4" max="4" pattern="[0-9]{4}">
               </div>
-    
+              <div class="col-md-2">
+                <label for="expireMonth">Month</label>
+                <input type="text" style="width:45px" name="Month" class="form-control mb-2" id="expireMonth" placeholder="12" required min="1" max="2" pattern="[0-9]+">
+              </div>
+              <div class="col-md-2" style="margin-left:-1.3em;">
+                <label for="expireDay">Day</label>
+                <input type="text" style="width:45px" name="Day" class="form-control mb-2" id="expireDay" placeholder="31" required min="1" max="2" pattern="[0-9]+">
+              </div>
             </div>
             <div class="modal-footer">
               <input type="submit" class="btn btn-primary"></input>
@@ -288,10 +281,21 @@
             var tr = $(this).parents('tr');
             var row = table.row( tr );
             var data = row.data();
-            document.getElementById('editSKU').value = data[0]
+            document.getElementById('editSKU').value = data[0];
             document.getElementById('editName').value = data[1];
             document.getElementById('editPrice').value = data[3];
             document.getElementById('editRP').value = data[4];
+        }
+    });
+
+    // Add Batches Modal
+    $('#inventory_table tbody').on('click', 'button', function() {
+        var name = $(this).attr('name');
+        if (name == "addBButton") {
+            var tr = $(this).parents('tr');
+            var row = table.row( tr );
+            var data = row.data();
+            document.getElementById('addBatchSKU').value = data[0];
         }
     });
 
